--- a/Flexbox_And_Responsive/Flexbox/index.html
+++ b/Flexbox_And_Responsive/Flexbox/index.html
@@ -20,7 +20,12 @@
         <div style="background-color: #5390d9">4</div>
         <div style="background-color: #6930c3">5</div>
     </section>
-
+    <h2>Another example</h2>
+    <main>
+        <section class="sidebar">1</section>
+        <section class="maincontent">2</section>
+        <section class="sidebar">3</section>
+    </main>
 </body>
 
 </html>
