--- a/JavaScript/Callback_Methods_CODE/setTimeout/index.html
+++ b/JavaScript/Callback_Methods_CODE/setTimeout/index.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>setTimeout</title>
 </head>
 
 <body>
-
-    <script src="thisAndArrowFunctions.js"></script>
+    <h1>setTimeout</h1>
+    <script src="app.js"></script>
 </body>
 
 </html>
