--- a/JavaScript/Run.html
+++ b/JavaScript/Run.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <script src="thisAndArrowFunctions.js"></script>
+    <script src="avnishQuestion.js"></script>
 </body>
 
 </html>
