--- a/EventBasics/Keyboard-Events/index.html
+++ b/EventBasics/Keyboard-Events/index.html
@@ -13,6 +13,7 @@
   <script>
     const h1 = document.querySelector("h1");
     window.addEventListener('keydown', function (event) {
+      console.dir(event);
       switch (event.key) {
         case 'Shift':
         case 'Backspace':
