--- a/JavaScript/AJAX/TVShowSearch/index.html
+++ b/JavaScript/AJAX/TVShowSearch/index.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-    <h1>TV Show Search</h1>
-    <form id="searchForm">
-        <input type="text" placeholder="TV Show Title" name="query">
-        <button>Search</button>
+    <h1>TV Shows</h1>
+    <form action="Search" id="searchForm">
+        <input type="text" name="query" placeholder="TV Show Title">
     </form>
     <script src="app.js"></script>
 </body>
